--- a/gui/mint-bill.ui
+++ b/gui/mint-bill.ui
@@ -248,7 +248,7 @@
                                     <property name="focus-on-click">False</property>
                                     <property name="hexpand">True</property>
                                     <property name="max-length">20</property>
-                                    <property name="placeholder-text">dd-mm-yyyy</property>
+                                    <property name="placeholder-text">mm-dd-yyyy</property>
                                     <property name="valign">center</property>
                                     <property name="vexpand">True</property>
                                     <layout>
@@ -780,7 +780,7 @@
                                 <child>
                                   <object class="GtkEntry" id="admin-page-area-code-entry">
                                     <property name="max-length">50</property>
-                                    <property name="placeholder-text">Area kode...</property>
+                                    <property name="placeholder-text">Gebied kode...</property>
                                     <layout>
                                       <property name="column">0</property>
                                       <property name="column-span">3</property>
